--- a/Makefile.common.footer
+++ b/Makefile.common.footer
@@ -90,6 +90,10 @@ complain_unless_all_exist = $(call complain_if_nonempty,$(call get_no_wildcards,
 $(call complain_unless_all_exist,$(LIB_SOURCES) $(BIN_SOURCES))
 
 
+COND_DARWIN     := $(if $(findstring Darwin,$(shell uname -a)),1)
+SO		:= $(if $(COND_DARWIN),dylib,so)
+
+
 LIB_SOURCES := $(wildcard $(LIB_SOURCES))
 BIN_SOURCES := $(wildcard $(BIN_SOURCES))
 
@@ -101,7 +105,7 @@ SOURCE_DIRS := $(sort ./ $(dir $(LIB_SOURCES) $(BIN_SOURCES)))
 # if the PROJECT_NAME is libxxx then LIB_NAME is libxxx
 # if the PROJECT_NAME is xxx    then LIB_NAME is libxxx
 LIB_NAME           := $(or $(filter lib%,$(PROJECT_NAME)),lib$(PROJECT_NAME))
-LIB_TARGET_SO_BARE := $(LIB_NAME).so
+LIB_TARGET_SO_BARE := $(LIB_NAME).${SO}
 LIB_TARGET_SO_ABI  := $(LIB_TARGET_SO_BARE).$(ABI_VERSION)
 LIB_TARGET_SO_FULL := $(LIB_TARGET_SO_ABI).$(TAIL_VERSION)
 LIB_TARGET_SO_ALL  := $(LIB_TARGET_SO_BARE) $(LIB_TARGET_SO_ABI) $(LIB_TARGET_SO_FULL)
@@ -203,7 +207,13 @@ all: $(if $(strip $(LIB_SOURCES)),$(LIB_TARGET_SO_ALL)) $(if $(strip $(BIN_SOURC
 
 # use --default-symver if we've got it. *BSDs do not
 LD_DEFAULT_SYMVER := $(shell ld --default-symver --version 1>/dev/null 2>/dev/null && echo -Wl,--default-symver)
-$(LIB_TARGET_SO_FULL): LDFLAGS += -shared $(LD_DEFAULT_SYMVER) -fPIC -Wl,-soname,$(notdir $(LIB_TARGET_SO_BARE)).$(ABI_VERSION)
+
+ifneq ($(COND_DARWIN),)
+  $(LIB_TARGET_SO_FULL): LDFLAGS += -dynamiclib -flat_namespace -fPIC
+else
+  $(LIB_TARGET_SO_FULL): LDFLAGS += -shared $(LD_DEFAULT_SYMVER) -fPIC -Wl,-soname,$(notdir $(LIB_TARGET_SO_BARE)).$(ABI_VERSION)
+endif
+
 
 
 $(LIB_TARGET_SO_BARE) $(LIB_TARGET_SO_ABI): $(LIB_TARGET_SO_FULL)
@@ -241,7 +251,7 @@ $(BIN_TARGETS): $(if $(strip $(LIB_SOURCES)),$(LIB_TARGET_SO_BARE) $(LIB_TARGET_
 
 
 clean:
-	rm -rf $(foreach d,$(SOURCE_DIRS),$(addprefix $d,*.a *.o *.so *.so.* *.d moc_* ui_*.h*)) $(BIN_TARGETS) $(foreach s,.c .h,$(addsuffix $s,$(basename $(shell find . -name '*.ggo')))) $(EXTRA_CLEAN)
+	rm -rf $(foreach d,$(SOURCE_DIRS),$(addprefix $d,*.a *.o *.${SO} *.${SO}.* *.d moc_* ui_*.h*)) $(BIN_TARGETS) $(foreach s,.c .h,$(addsuffix $s,$(basename $(shell find . -name '*.ggo')))) $(EXTRA_CLEAN)
 distclean: clean
 
 .PHONY: distclean clean
@@ -356,7 +366,7 @@ endif
 ifneq ($(strip $(DIST_BIN)),)
 	chrpath -d $(DESTDIR)/usr/bin/* 2>/dev/null || true
 endif
-	find $(DESTDIR) -name '*.so' | xargs chrpath -d
+	find $(DESTDIR) -name '*.${SO}' | xargs chrpath -d
 
         # Any perl programs need their binary path stuff stripped out. This
         # exists to let these run in-tree, but needs to be removed at
