--- a/Makefile.common.header
+++ b/Makefile.common.header
@@ -75,12 +75,42 @@ PYTHON_VERSION_FOR_EXTENSIONS ?= 3 # 2 or 3
 # Variables to ask Python about
 _PYVARS_LIST := CC CFLAGS CCSHARED INCLUDEPY BLDSHARED BLDLIBRARY LDFLAGS EXT_SUFFIX MULTIARCH
 
+ifneq ($(DEB_HOST_MULTIARCH),)
+  # We have a debian multiarch. We're almost certainly cross-building with
+  # Debian. Try to get the variables directly, using any-architecture python
+  define _PYVARS_GET_CONFIG :=
+import ast
+import sys
+
+for d in sys.path:
+    try:
+        f = open(d + "/_sysconfigdata__$(DEB_HOST_MULTIARCH).py")
+    except:
+        continue
+
+    s = f.read()
+    s = re.sub("^#.*",                "", s, flags=re.M)
+    s = re.sub("^[0-9a-zA-Z_]+ *= *", "", s, flags=re.M)
+    conf = ast.literal_eval(s)
+    break
+else:
+    raise Exception("Could not find \"_sysconfigdata__$(DEB_HOST_MULTIARCH).py\" in any sys.path directories")
+endef
+
+else
+  _PYVARS_GET_CONFIG := conf = sysconfig.get_config_vars()
+endif
+
+
 # Python script to query those variables
 define _PYVARS_SCRIPT
 from __future__ import print_function
 import sysconfig
 import re
-conf = sysconfig.get_config_vars()
+
+# get "conf" dict
+$(_PYVARS_GET_CONFIG)
+
 for v in ($(foreach v,$(_PYVARS_LIST),"$v",)):
     if v in conf:
         print(re.sub("[\t ]+", "__whitespace__", "_PY_{}:={}".format(v, conf[v])))
