--- a/Makefile.common.header
+++ b/Makefile.common.header
@@ -24,6 +24,12 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 
+# osx
+COND_DARWIN := $(filter Darwin,$(shell uname -s))
+SO          := $(if $(COND_DARWIN),dylib,so)
+
+
+
 # This stuff defines variables (PY_EXT_SUFFIX) that could be used by the user
 # Makefile at parsing time. So this must be included BEFORE the rest of the user
 # Makefile
@@ -133,7 +139,11 @@ SPACE := $(SPACE) $(SPACE)
 dirs_to_dotdot = $(subst $(SPACE),/,$(patsubst %,..,$(subst /, ,$1)))
 get_parentdir_relative_to_childdir = /$(call dirs_to_dotdot,$(patsubst $1%,%,$2))
 
-_PY_MRBUILD_LDFLAGS = $(_PY_LDFLAGS) -L$(abspath .) -Wl,-rpath='$$ORIGIN'$(call get_parentdir_relative_to_childdir,$(abspath .),$(dir $(abspath $@)))
+_PY_MRBUILD_LDFLAGS = $(_PY_LDFLAGS) -L$(abspath .)
+ifeq ($(COND_DARWIN),)
+_PY_MRBUILD_LDFLAGS += -Wl,-rpath='$$ORIGIN'$(call get_parentdir_relative_to_childdir,$(abspath .),$(dir $(abspath $@)))
+endif
+
 _PY_MRBUILD_LINKER  = $(_PY_BLDSHARED) $(_PY_BLDLIBRARY)
 endef
 
@@ -168,7 +178,10 @@ $(eval $(call _PY_DEFINE_API_VAR_EXTSUFFIX,PY_EXT_SUFFIX))
 define add_local_library_path
 CFLAGS   += -I$1
 CXXFLAGS += -I$1
-LDFLAGS += -L$1 -Wl,-rpath=$1
+LDFLAGS  += -L$1
+ifeq ($(COND_DARWIN),)
+LDFLAGS += -Wl,-rpath=$1
+endif
 endef
 
 
