--- a/Makefile.common.header
+++ b/Makefile.common.header
@@ -139,11 +139,9 @@ SPACE := $(SPACE) $(SPACE)
 dirs_to_dotdot = $(subst $(SPACE),/,$(patsubst %,..,$(subst /, ,$1)))
 get_parentdir_relative_to_childdir = /$(call dirs_to_dotdot,$(patsubst $1%,%,$2))
 
-_PY_MRBUILD_LDFLAGS = $(_PY_LDFLAGS) -L$(abspath .)
-ifeq ($(COND_DARWIN),)
-_PY_MRBUILD_LDFLAGS += -Wl,-rpath,'$$ORIGIN'$(call get_parentdir_relative_to_childdir,$(abspath .),$(dir $(abspath $@)))
-endif
-RPATH_OPTION = -Wl,-rpath,'$$ORIGIN'$(call get_parentdir_relative_to_childdir,$(abspath .),$(dir $(abspath $@)))
+RPATH_OPTION = -Wl,-rpath,$(if $(COND_DARWIN),@executable_path,'$$ORIGIN')$(call get_parentdir_relative_to_childdir,$(abspath .),$(dir $(abspath $@)))
+
+_PY_MRBUILD_LDFLAGS = $(RPATH_OPTION) $(_PY_LDFLAGS) -L$(abspath .)
 
 _PY_MRBUILD_LINKER  = $(_PY_BLDSHARED) $(_PY_BLDLIBRARY)
 endef
@@ -180,9 +178,7 @@ define add_local_library_path
 CFLAGS   += -I$1
 CXXFLAGS += -I$1
 LDFLAGS  += -L$1
-ifeq ($(COND_DARWIN),)
 LDFLAGS += -Wl,-rpath,$1
-endif
 endef
 
 
