install-time RPATH-stripping on BSD for Python modules
This is still incomplete. Needs testing and probably fixing

--- a/Makefile.common.footer
+++ b/Makefile.common.footer
@@ -350,8 +350,20 @@ ifeq ($(COND_DARWIN),)
 	find $(DESTDIR) -name '*.$(SO)' | xargs chrpath -d
 else
         # BSD. I need to strip out the RPATHs individually
-	echo "THIS IS INCOMPLETE. I ALSO NEED TO STRIP OUT RPATH FOR ANYTHING THAT USED _PY_MRBUILD_LDFLAGS"
+  ifneq ($(strip $(DIST_BIN)),)
+        # here $f is the built file
 	$(foreach f,$(filter $(DIST_BIN),$(BIN_TARGETS)),install_name_tool -delete_rpath $(call RPATH,$f) $(DESTDIR)/usr/bin/$(notdir $f) && \$(NEWLINE)) true
+  endif
+
+
+  echo "bsd install-time stripping of rpath is incomplete:"
+  echo "1. need py2 path"
+  echo "2. does $(wildcard) work here? it will be expanded before those targets exist"
+  echo "3. what about nested paths? test mrgingham"
+  ifneq ($(strip $(DIST_PY3_MODULES)),)
+        # here $f is the installed file
+	$(foreach f,$(filter %$(PY_EXT_SUFFIX),$(wildcard $(DESTDIR)/$(PY3_MODULE_PATH)/$(DIST_PY3_MODULES)/*)),install_name_tool -delete_rpath $(call RPATH,$(patsubst $(DESTDIR)/$(PY3_MODULE_PATH)/%,%,$f)) $f && \$(NEWLINE)) true
+  endif
 
 endif
         # Any perl programs need their binary path stuff stripped out. This
