The compiler is given MRBUILD_VERSION and not VERSION
Because some code may already have a symbol called VERSION, and
mrbuild's definition may clash with it.

--- a/Makefile.common.footer
+++ b/Makefile.common.footer
@@ -102,7 +102,7 @@ BIN_TARGETS := $(basename $(BIN_SOURCES))
 # static libraries, so this is 100% correct
 $(LIB_OBJECTS): CCXXFLAGS += -fPIC
 
-CCXXFLAGS += -DVERSION='"$(VERSION)"'
+CCXXFLAGS += -DMRBUILD_VERSION='"$(VERSION)"'
 
 
 
