I use multiarch-aware tools, if they're available
The dpkg-architecture command is memoized, so this should be quick, hopefully.
This patch should allow users of mrbuild to write Makefiles that are
cross-buildable on Debian AND build natively as usual on non-Debian machines

--- a/Makefile.common.footer
+++ b/Makefile.common.footer
@@ -65,8 +65,6 @@ $(foreach v,$(MUST_DEF_VARIABLES),$(if $($v),,$(error User MUST specify $v)))
 VERSION ?= $(ABI_VERSION).$(TAIL_VERSION)
 
 # Default compilers. By default, we use g++ as a linker
-CC        ?= gcc
-CXX       ?= g++
 NVCC      ?= nvcc
 CC_LINKER ?= $(CXX)
 
@@ -265,8 +263,7 @@ endif
 USE_DEBIAN_PATHS := $(wildcard /etc/debian_version)
 ifneq (,$(USE_DEBIAN_PATHS))
   # we're a debian-ish box, use the multiarch dir
-  DEB_HOST_MULTIARCH := $(shell dpkg-architecture -qDEB_HOST_MULTIARCH 2>/dev/null)
-  USRLIB             := usr/lib/$(DEB_HOST_MULTIARCH)
+  USRLIB = usr/lib/$(DEB_HOST_MULTIARCH)
 else
   # we're something else. Do what CentOS does.
   # If /usr/lib64 exists, use that. Otherwise /usr/lib
